--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -50,3 +50,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_PROD_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_PROD_SECRET_ACCESS_KEY}}
           BUCKET: ${{secrets.AWS_PROD_BUCKET}}
+          OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
