--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -8,7 +8,7 @@ jobs:
   test:
     runs-on: ubuntu-latest #-4-cores
     defaults:
-      runs:
+      run:
         working-directory: reporting
 
     steps:
