--- a/reporting/docker-compose.yaml
+++ b/reporting/docker-compose.yaml
@@ -135,8 +135,9 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - TDS_URL=http://data-service:8000
-      - MIT_TR_URL
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
+      - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
+      - MIT_TR_URL=http://54.227.237.7
       - OPENAI_API_KEY
     ports:
       - 8001:8000
@@ -155,10 +156,9 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - TDS_URL=http://data-service:8000
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
-      - COSMOS_URL
-      - MIT_TR_URL
+      - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
+      - MIT_TR_URL=http://54.227.237.7
       - OPENAI_API_KEY
     ports:
       - 8080
