Report after build

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,3 +29,15 @@ jobs:
     secrets:
       username: ${{ github.repository_owner }}
       password: ${{ secrets.GITHUB_TOKEN }}
+
+  # Execute knowledeg-middleware reporting
+  report:
+    runs-on: ubuntu-latest
+    needs: 
+      - bake
+    steps:
+      - name: Report
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GHP_ACCESS_TOKEN }}
+        run: |
+          gh workflow run report.yaml --repo DARPA-ASKEM/knowledge-middleware --ref main
