--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 packages = [{include = "lib"}, {include = "worker"}, {include = "api"}, {include = "tests"}]
 
 [tool.poetry.dependencies]
+askem-extractions = { git = "https://github.com/ml4ai/ASKEM-TA1-DataModel.git" }
 python = "^3.10"
 redis = "^4.6.0"
 rq = "^1.15.1"
