ensure that project id and TDS url is specifiable in environment for report runner

--- a/reporting/env.sample
+++ b/reporting/env.sample
@@ -4,9 +4,10 @@ SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 COSMOS_URL=http://xdd.wisc.edu/cosmos_service
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
 # TDS_URL=http://data-service.staging.terarium.ai
-TDS_URL=http://data-service-api:8000
+TDS_URL=http://data-service:8000
 OPENAI_API_KEY=
 UPLOAD=FALSE
 BUCKET=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+PROJECT_ID=102
