--- a/reporting/docker-compose.yaml
+++ b/reporting/docker-compose.yaml
@@ -135,7 +135,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - TDS_URL=http://data-service:8000
+      - TDS_URL
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
@@ -157,7 +157,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - TDS_URL=http://data-service:8000
+      - TDS_URL
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
@@ -192,6 +192,8 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - OPENAI_API_KEY
+      - TDS_URL
+      - PROJECT_ID
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
