--- a/reporting/docker-compose.yaml
+++ b/reporting/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       minio:
         condition: service_started
     ports:
-      - 8000
+      - 8000:8000
   minio:
     image: ghcr.io/darpa-askem/data-service-storage:latest
     environment:
@@ -46,7 +46,8 @@ services:
     entrypoint: ""
     command: [ "minio", "server", "/data" ]
     ports:
-      - 9000
+      - 9000:9000
+      - 9001:9001
     depends_on:
       - neo4j
       - data-service-dev-db
@@ -134,7 +135,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - TDS_URL=http://data-service:8000
+      - TDS_URL
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
@@ -156,7 +157,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - TDS_URL=http://data-service:8000
+      - TDS_URL
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
@@ -191,6 +192,8 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - OPENAI_API_KEY
+      - TDS_URL
+      - PROJECT_ID
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
       - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
       - MIT_TR_URL=http://54.227.237.7
