--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest #-4-cores
+    environment: "report-runner"
     defaults:
       run:
         working-directory: reporting
@@ -54,3 +55,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_PROD_SECRET_ACCESS_KEY}}
           BUCKET: ${{secrets.AWS_PROD_BUCKET}}
           OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+          PROJECT_ID: ${{vars.PROJECT_ID}}
+          TDS_URL: ${{vars.TDS_URL}}
