--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8010:8000"
     env_file:
-      - .env
+      - .env.local
     networks:
       - knowledge-middleware
     volumes:
@@ -26,6 +26,6 @@ services:
       context: ./
       dockerfile: worker/Dockerfile
     env_file:
-      - .env
+      - .env.local
     networks:
       - knowledge-middleware
