--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8010:8000"
     env_file:
-      - .env
+      - .env.local
     networks:
       - knowledge-middleware
     depends_on:
@@ -35,7 +35,7 @@ services:
       context: ./
       dockerfile: worker/Dockerfile
     env_file:
-      - .env
+      - .env.local
     depends_on:
       - redis
     networks:
