--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     ports:
       - "8010:8000"
     env_file:
-      - .env
+      - .env.local
     networks:
       - knowledge-middleware
       - data-api
@@ -38,7 +38,7 @@ services:
       context: ./
       dockerfile: worker/Dockerfile
     env_file:
-      - .env
+      - .env.local
     depends_on:
       - redis
     networks:
