--- a/reporting/tests/Dockerfile
+++ b/reporting/tests/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.10
 
 WORKDIR /km-reporting
-COPY tests/requirements.txt ./
+COPY reporting/tests/requirements.txt ./
 RUN pip install -r requirements.txt
 
-COPY scenarios scenarios/
-COPY tests tests/
+COPY reporting/scenarios scenarios/
+COPY reporting/tests tests/
+COPY lib tests/lib/
 
 ENTRYPOINT [ "bash", "tests/run_tests.sh" ]
