--- a/reporting/tests/requirements.txt
+++ b/reporting/tests/requirements.txt
@@ -1,11 +1,17 @@
+annotated-types==0.6.0
 boto3==1.28.57
 botocore==1.31.57
 certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
 jmespath==1.0.1
+pydantic==2.6.1
+pydantic-settings==2.1.0
+pydantic_core==2.16.2
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 requests==2.31.0
 s3transfer==0.7.0
 six==1.16.0
+typing_extensions==4.9.0
 urllib3==1.26.16
